--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,6 @@
 <body>
   <div class="container">
     <div class="row mt-3 mb-3">
-      <h2>設定</h2>
       <div class="col">
         <label for="url" class="form-label">YouTubeのURL</label>
         <input id="url" type="text" class="form-control" aria-describedby="urlHelp">
@@ -100,8 +99,14 @@
     </div>
   </div>
   <footer class="blog-footer mt-3">
-    <p>v<span id="ver">0.0.0</span></p>
-    <p class="m-0">© 2022 紅坂柚月</p>
+    <a href="https://github.com/yudukiak/nagemoji/releases/latest" target="_blank">
+      <button type="button" class="btn btn-secondary mb-2">
+        <p class="m-0">v<span id="ver">0.0.0</span></p>
+        <span class="badge bg-info text-dark" id="notver">更新はありません</span>
+        <span class="badge bg-warning text-dark d-none" id="newver">更新があります</span>
+      </button>
+    </a>
+    <p class="mb-0">© 2022 紅坂柚月</p>
   </footer>
   <!-- Modal -->
   <div class="modal fade" id="resetModal" tabindex="-1" aria-hidden="true">
